<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ex</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="http">http://</string>

    <!-- Common -->
    <string name="text">text</string>
    <string name="ok">确认</string>
    <string name="known">知道了</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="complete">完成</string>
    <string name="reset">重 置</string>
    <string name="default_value">默 认</string>
    <string name="save">保存</string>
    <string name="update">更新</string>
    <string name="refresh">刷新</string>
    <string name="test">测试</string>
    <string name="image">图片</string>
    <string name="count_zero">0</string>
    <string name="money_zero">0.00</string>
    <string name="wait">等待</string>
    <string name="failed">失败</string>
    <string name="finish">完成</string>
    <string name="unset">未设置</string>
    <string name="back_event_msg">再按一次后退键退出</string>
    <string name="click_here_setup">点此设置</string>

    <!-- Login & Register -->
    <string name="login">登录</string>
    <string name="login_btn_text">登 录</string>
    <string name="login_title">Explore</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_bottom_text">explore.imwork.net</string>
    <string name="login_success">登录成功</string>
    <string name="login_username_empty">账号和密码不能为空</string>

    <string name="register">注册</string>
    <string name="register_btn_text">注 册</string>
    <string name="register_username_hint">请输入注册的用户名</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_success">注册成功</string>

    <string name="init_setting">初始设置</string>
    <string name="init_setting_url_tag">配置服务器地址</string>

    <!-- Http Error Message -->
    <string name="http_error_no_complete_listener">没有设置数据处理</string>
    <string name="http_error_no_url">没有设置请求地址</string>
    <string name="http_error_no_parameters">没有设置请求参数</string>
    <string name="http_request_exception">服务器请求失败，请检查参数是否正确</string>
    <string name="user_exception_title">服务器请求失败</string>

    <!-- Phone status error message -->
    <string name="phone_error_no_imsi">无法获取SIM卡信息，请检查SIM卡状态</string>
    <string name="phone_error_no_imei">无法获取手机IMEI信息</string>

    <!-- Main tab title -->
    <string name="tab_title_overview">概况</string>
    <string name="tab_title_order">订单</string>
    <string name="tab_title_logistics">物流</string>
    <string name="tab_title_product">商品</string>
    <string name="tab_title_more">更多</string>

    <!-- Overview -->
    <string name="overview_table1_title">我的单据</string>
    <string name="overview_table2_title">我的任务</string>
    <string name="overview_out_sal">销售发货</string>
    <string name="overview_out_dtc">送货调货</string>
    <string name="overview_out_ttc">退货调货</string>
    <string name="overview_transport">我的发货</string>
    <string name="overview_my_audit">我的审核</string>
    <string name="overview_my_schedule">我的日程</string>

    <!-- First Login init -->
    <string name="first_login_actionbar_title">初始化应用</string>
    <string name="first_login_init_failed">加载本地权限失败,请联系管理员</string>
    <string name="first_login_init_cat_failed">加载商品类别失败</string>
    <string name="first_login_init_address_failed">加载地址常量信息失败</string>
    <string name="first_login_init_data_success">导入初始化信息成功</string>
    <string name="first_login_init_data_failed">导入初始化信息失败</string>
    <string name="first_login_init_open_msg">您是第一次使用Explore，正在初始化数据</string>
    <string name="first_login_init_date_msg">正在初始化数据&#8230;</string>
    <string name="first_login_init_product_category">初始化商品类别数据</string>
    <string name="first_login_init_location_data">初始化地理信息数据</string>

    <!-- Choose dept -->
    <string name="choose_dept_actionbar_title">选择经营单位</string>
    <string name="choose_dept_dialog_title">确认经营单位</string>
    <string name="choose_dept_dialog_msg">确定要选择%1$s作为默认的经营单位吗？</string>

    <!-- 应用设置 -->
    <string name="setup_title">系統设置</string>
    <string name="setup_keep_login">自动登入</string>
    <string name="setup_keep_login_info">成功登录之后，下次登录跳过用户名、密码输入步骤</string>
    <string name="setup_save_login">保存登录信息</string>
    <string name="setup_save_logininfo">成功登录之后保存用户名和密码</string>
    <string name="setup_open_locationservice">开启定位服务</string>
    <string name="setup_clear_cache">清空缓存</string>
    <string name="setup_logout">注销当前账户</string>
    <string name="setup_receive_p2pinfo">接收推送信息</string>
    <string name="setup_msg_p2p_succeed">设置成功，重启后生效。</string>

    <string name="prefs_categoty_account">账号设置</string>
    <string name="prefs_account_save_login">保存登录信息</string>
    <string name="prefs_account_save_login_summary">成功登录之后保存用户名和密码</string>
    <string name="prefs_account_auto_login">自动登入</string>
    <string name="prefs_account_auto_login_summary">成功登录之后，下次登录跳过用户名、密码输入步骤</string>
    <string name="prefs_categoty_service">功能设置</string>
    <string name="prefs_service_receive_p2pinfo">接收推送信息</string>
    <string name="prefs_service_receive_p2pinfo_summary">定时接收服务器的推送消息</string>
    <string name="prefs_service_location">定位服务</string>
    <string name="prefs_service_location_summary">向服务器上传位置信息</string>
    <string name="prefs_account_logout">登出</string>
    <string name="prefs_account_logout_summary">注销当前账户</string>

</resources>
