<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_login_init_open_msg" />

    <LinearLayout
        android:id="@+id/act_appinit_load_procategory_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_login_init_product_category" />

        <ProgressBar
            android:id="@+id/act_appinit_load_procategory"
            style="?android:attr/progressBarStyle"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/act_appinit_procategory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/act_appinit_load_location_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_login_init_location_data" />

        <ProgressBar
            android:id="@+id/act_appinit_load_location"
            style="?android:attr/progressBarStyle"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/act_appinit_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>