<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:text="@string/login_title"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/login_title"
        android:textSize="64sp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_layout_input"
        android:layout_alignParentBottom="true"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_edt_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableLeft="@drawable/login_username_icon"
            android:drawableStart="@drawable/login_username_icon"
            android:drawablePadding="5dp"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:textColorHint="@color/edittext_hint"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="2dp"
            android:paddingEnd="2dp"
            android:shadowColor="@color/login_edt_shadow" />

        <EditText
            android:id="@+id/login_edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/edittext_hint"
            android:background="@drawable/login_edittext_bg"
            android:drawableLeft="@drawable/login_password_icon"
            android:drawableStart="@drawable/login_password_icon"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="2dp"
            android:paddingEnd="2dp"/>

        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            android:drawablePadding="5dp"
            android:background="@drawable/register_button_bg"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/arrow_right" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login_btn_text"
            android:layout_marginBottom="80dp"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>