<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_tab_main_pages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_main_bottom_tab_line">
    </FrameLayout>

    <View
        android:id="@+id/tab_main_bottom_tab_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bottom_tab_line"
        android:layout_above="@+id/tab_main_bottom_tab_layout" />
    
    <LinearLayout
        android:id="@+id/tab_main_bottom_tab_layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bottom_tab_layout_bg"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/tab_height">

        <RelativeLayout
            android:id="@+id/tab_main_overview_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_tab_bg"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tab_main_icon_overview"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tab_main_tab_tag_overview"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_home"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/tab_main_tab_tag_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BottomTabTag"
                android:text="@string/tab_title_overview"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_main_order_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_tab_bg"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tab_main_icon_order"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tab_main_tab_tag_order"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_order"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/tab_main_tab_tag_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BottomTabTag"
                android:text="@string/tab_title_order"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_main_logistics_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_tab_bg"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tab_main_icon_logistics"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tab_main_tab_tag_logistics"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_logistics"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/tab_main_tab_tag_logistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BottomTabTag"
                android:text="@string/tab_title_logistics"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_main_product_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_tab_bg"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tab_main_icon_product"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tab_main_tab_tag_product"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_product"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/tab_main_tab_tag_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BottomTabTag"
                android:text="@string/tab_title_product"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_main_more_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_tab_bg"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tab_main_icon_more"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tab_main_tab_tag_more"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_more"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/tab_main_tab_tag_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BottomTabTag"
                android:text="@string/tab_title_more"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>